@@ -3,3 +3,11 @@
 textarea#form-widgets-content {
     min-height: 12em;
 }
+
+@include ie-only(".sl-can-edit .ftw-htmlblock-htmlblock.has-iframe .sl-block-content") {
+  @include fix-iframe-cursor();
+}
+
+@include ie-only(".sl-can-edit .ftw-htmlblock-htmlblock iframe") {
+  @include fix-iframe-hover();
+}
