@@ -5,6 +5,8 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
+- Make iframe fixes compatible with ftw.iframefix 2.0. [Kevin Bieri]
+
 - Install ftw.iframefix
   [Kevin Bieri]
 
